Skeleton opgezet voor index

--- a/Assignment1/background.html
+++ b/Assignment1/background.html
@@ -14,6 +14,23 @@
         <link rel="stylesheet" href="styles/style.css">
     </head>
     <body>
+        <header>
 
+        </header>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="summary.html">Synopsis</a></li>
+                <li><a href="ratings.html">Ratings</a></li>
+                <li><a href="background.html">Background</a></li>
+                <li><a href="contact.html">Contact</a></li>
+            </ul>
+        </nav>
+        <main>
+
+        </main>
+        <footer>
+
+        </footer>
     </body>
 </html>
