header hetzelfde gemaakt over alle pagina's

--- a/Assignment1/index.html
+++ b/Assignment1/index.html
@@ -7,6 +7,14 @@
         <!-- ------------------------------>
         <meta name="author" content="Mattijs Gietman, Niek Grimbergen and Sileman Patang">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+
+
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
+
+
         <link rel="stylesheet" href="styles/style.css">
     </head>
     <body>
@@ -16,7 +24,7 @@
 
             <!-- Logo can come here -->
             <figure>
-                <img src="" alt=""/>
+                <img src="logo.jfif" alt="img"/>
             </figure>
 
             <!-- nav-tag for navigation between our five pages and is shared among pages -->
@@ -37,10 +45,10 @@
         <main>
 
             <!-- article-tag is to announce that the page-specific part starts -->
-            <article>
+            <article id="homepage">
 
                 <!-- Maybe add a banner here -->
-                <img src="" alt=""/>
+                <img id="banner-img" src="" alt=""/>
 
                 <h1>The Martian</h1>
 
