--- a/Assignment1/contact.html
+++ b/Assignment1/contact.html
@@ -2,15 +2,12 @@
     <head>
         <meta charset="UTF-8">
         <!-- Moet voor elke pagina apart -->
-        <title></title>
+        <title>The Martian | Contact</title>
         <meta name="description" content="">
         <!-- ------------------------------>
 
         <meta name="author" content="Mattijs Gietman, Niek Grimbergen and Sileman Patang">
 
-
-
-        <meta   name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="styles/style.css">
     </head>
     <body>
