--- a/Assignment1/index.html
+++ b/Assignment1/index.html
@@ -2,18 +2,11 @@
     <head>
         <meta charset="UTF-8">
         <!-- Moet voor elke pagina apart -->
-        <title>The Martian</title>
+        <title>The Martian | Homepage</title>
         <meta name="description" content="">
         <!-- ------------------------------>
         <meta name="author" content="Mattijs Gietman, Niek Grimbergen and Sileman Patang">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-
-
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
-
 
         <link rel="stylesheet" href="styles/style.css">
     </head>
@@ -24,7 +17,7 @@
 
             <!-- Logo can come here -->
             <figure>
-                <img src="logo.jfif" alt="img"/>
+                <img src="logo.jfif" alt="Logo reading &quot;The Martian&quot;"/>
             </figure>
 
             <!-- nav-tag for navigation between our five pages and is shared among pages -->
