wat section en inhoud toegevoegd

--- a/Assignment1/index.html
+++ b/Assignment1/index.html
@@ -46,8 +46,34 @@
                 <h1>The Martian</h1>
 
                 <!-- For instance -->
-                <section>
+                <section class="cast">
                     <h2>Cast</h2>
+
+                    <section class="cast-element">
+                        <img src="matt_damon.jfif" alt="">
+                        <h3>Matt Damon</h3>
+                        <p>Matt Damon plays the role of Mark Watney, an astronaut and botanist who is left stranded on Mars after a fierce dust storm forces his crew to abandon the mission. Watney must use his resourcefulness, courage, and wit to survive in the hostile environment of Mars. He is a brave and determined character who is willing to push the boundaries of human achievement in order to survive. Despite his dire circumstances, Watney remains optimistic and uses his knowledge of science and engineering to find ways to survive and make contact with Earth.</p>
+                    </section>
+
+                    <section class="cast-element">
+                        <img src="jessica_chastain.jfif" alt="">
+                        <h3>Jessica Chastain</h3>
+                        <p>
+                            Jessica Chastain plays the role of Melissa Lewis in the 2015 science fiction film The Martian. She is the captain of the mission to Mars, tasked with leading her crew of astronauts on a daring rescue mission to save a stranded astronaut. She is portrayed as a competent and capable leader, with a strong sense of duty and responsibility. Chastain brings a great deal of depth to the role, portraying Lewis as a determined and decisive figure who is willing to make tough choices in order to keep her crew safe and accomplish the mission.
+                        </p>
+                    </section>
+
+                    <section class="cast-element">
+                        <img src="kristen_wiig.jfif" alt="">
+                        <h3>Kristen Wiig</h3>
+                        <p>
+                            Kristen Wiig played the role of Annie Montrose in the 2015 film The Martian, directed by Ridley Scott. She played the role of a media representative for NASA and was responsible for handling the press and managing the public's reaction to the news of an astronaut being left behind on Mars. Her character was composed, professional, and had a no-nonsense attitude. Kristen Wiig brought a lightheartedness to the role, creating a memorable character that helped to bring a sense of levity to the film.
+                        </p>
+                    </section>
+
+                    <section>
+                        <img src="" alt="">
+                    </section>
                 </section>
 
             </article>
