mobile first start

--- a/Assignment1/index.html
+++ b/Assignment1/index.html
@@ -17,7 +17,7 @@
 
             <!-- Logo can come here -->
             <figure>
-                <img src="logo.jfif" alt="Logo reading &quot;The Martian&quot;"/>
+                <img class="logo" src="logo.jfif" alt="Logo reading &quot;The Martian&quot;"/>
             </figure>
 
             <!-- nav-tag for navigation between our five pages and is shared among pages -->
@@ -41,7 +41,7 @@
             <article id="homepage">
 
                 <!-- Maybe add a banner here -->
-                <img id="banner-img" src="" alt=""/>
+                <img class="banner" id="banner-img" src="banner.jpg" alt=""/>
 
                 <h1>The Martian</h1>
 
@@ -52,7 +52,9 @@
                     <section class="cast-element">
                         <img src="matt_damon.jfif" alt="">
                         <h3>Matt Damon</h3>
-                        <p>Matt Damon plays the role of Mark Watney, an astronaut and botanist who is left stranded on Mars after a fierce dust storm forces his crew to abandon the mission. Watney must use his resourcefulness, courage, and wit to survive in the hostile environment of Mars. He is a brave and determined character who is willing to push the boundaries of human achievement in order to survive. Despite his dire circumstances, Watney remains optimistic and uses his knowledge of science and engineering to find ways to survive and make contact with Earth.</p>
+                        <p>
+                            Matt Damon plays the role of Mark Watney, an astronaut and botanist who is left stranded on Mars after a fierce dust storm forces his crew to abandon the mission. Watney must use his resourcefulness, courage, and wit to survive in the hostile environment of Mars. He is a brave and determined character who is willing to push the boundaries of human achievement in order to survive. Despite his dire circumstances, Watney remains optimistic and uses his knowledge of science and engineering to find ways to survive and make contact with Earth.
+                        </p>
                     </section>
 
                     <section class="cast-element">
