--- a/Assignment1/ratings.html
+++ b/Assignment1/ratings.html
@@ -26,13 +26,72 @@
                     <li><a href="index.html">Home</a></li>
                     <li><a href="summary.html">Synopsis</a></li>
                     <li><a href="ratings.html">Ratings</a></li>
-                    <li><a href="background.html">Background</a></li>
+                    <li><a href="cast.html">Cast</a></li>
                     <li><a href="contact.html">Contact</a></li>
                 </ul>
             </nav>
         </header>
         <main>
+            <article id="ratings">
+                <section>
+                    <table id="ratingstable">
+                        <thead>
+                            <tr>
+                                <th>Platform</th>
+                                <th>Rating</th>
+                                <th>Source</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td>IMDB</td>
+                                <td>8.0/10</td>
+                                <td>
+                                    <a href="https://www.imdb.com/title/tt3659388/">IMDB</a>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>Rotten Tomatoes</td>
+                                <td>91%</td>
+                                <td>
+                                    <a href="https://www.rottentomatoes.com/m/the_martian">Rotten Tomatoes</a>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>The Guardian</td>
+                                <td>4/5</td>
+                                <td>
+                                    <a href="https://www.theguardian.com/film/2015/oct/04/the-martian-review-matt-damon-shines-stranded-astronaut">The Guardian</a>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>Google</td>
+                                <td>4.6/5</td>
+                                <td>
+                                    <a href="https://play.google.com/store/movies/details/The_Martian?id=TeZDLAaDYos&hl=en&gl=US&pli=1">Google Play</a>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>Metacritic</td>
+                                <td>80</td>
+                                <td>
+                                    <a href="https://www.metacritic.com/movie/the-martian">Metacritic</a>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>Amazon Prime Video</td>
+                                <td>4/5</td>
+                                <td>
+                                    <a href="https://www.amazon.com/gp/video/detail/B01L9T7FFI/ref=atv_sr_def_c_unkc_4_1_4?sr=1-4&pageTypeIdSource=ASIN&pageTypeId=B01L9T80YS&qid=1666813018339">Amazon</a>
+                                </td>
+                            </tr>
+                        </tbody>
+                        <tfoot>
 
+                        </tfoot>
+                    </table>
+                </section>
+            </article>
         </main>
         <footer>
 
