--- a/Assignment1/contact.html
+++ b/Assignment1/contact.html
@@ -25,7 +25,7 @@
                     <li><a href="index.html">Home</a></li>
                     <li><a href="summary.html">Synopsis</a></li>
                     <li><a href="ratings.html">Ratings</a></li>
-                    <li><a href="background.html">Background</a></li>
+                    <li><a href="cast.html">Cast</a></li>
                     <li><a href="contact.html">Contact</a></li>
                 </ul>
             </nav>
