Add some extra content.

--- a/Assignment1/contact.html
+++ b/Assignment1/contact.html
@@ -16,7 +16,7 @@
 
             <!-- Logo can come here -->
             <figure>
-                <img src="logo.jfif" alt="img"/>
+                <img src="images/logo.jfif" alt="img"/>
             </figure>
 
             <!-- nav-tag for navigation between our five pages and is shared among pages -->
