--- a/Assignment1/index.html
+++ b/Assignment1/index.html
@@ -16,8 +16,8 @@
         <header>
 
             <!-- Logo can come here -->
-            <figure>
-                <img class="logo" src="logo.jfif" alt="Logo reading &quot;The Martian&quot;"/>
+            <figure class="logo-container">
+                <img class="logo-container__logo" src="logo.jfif" alt="Logo reading &quot;The Martian&quot;"/>
             </figure>
 
             <!-- nav-tag for navigation between our five pages and is shared among pages -->
@@ -41,7 +41,9 @@
             <article id="homepage">
 
                 <!-- Maybe add a banner here -->
-                <img class="banner" id="banner-img" src="banner.jpg" alt=""/>
+                <figure class="banner-container">
+                    <img class="banner-container__banner" id="banner-img" src="banner.jpg" alt=""/>
+                </figure>
 
                 <h1>The Martian</h1>
 
