--- a/Assignment1/index.html
+++ b/Assignment1/index.html
@@ -16,13 +16,9 @@
         <header>
 
             <!-- Logo can come here -->
-<<<<<<< HEAD
+
             <figure class="logo-container">
-                <img class="logo-container__logo" src="logo.jfif" alt="Logo reading &quot;The Martian&quot;"/>
-=======
-            <figure>
-                <img class="logo" src="images/logo.jfif" alt="Logo reading &quot;The Martian&quot;"/>
->>>>>>> 61f9cad9d7d22304b5ec74d9c47c2a95db32cafa
+                <img class="logo-container__logo" src="images/logo.jfif" alt="Logo reading &quot;The Martian&quot;"/>
             </figure>
 
             <!-- nav-tag for navigation between our five pages and is shared among pages -->
@@ -45,14 +41,10 @@
             <!-- article-tag is to announce that the page-specific part starts -->
             <article id="homepage">
 
-<<<<<<< HEAD
                 <!-- Maybe add a banner here -->
                 <figure class="banner-container">
-                    <img class="banner-container__banner" id="banner-img" src="banner.jpg" alt=""/>
+                    <img class="banner-container__banner" id="banner-img" src="images/banner.jpg" alt=""/>
                 </figure>
-=======
-                <img class="banner" id="banner-img" src="images/banner.jpg" alt=""/>
->>>>>>> 61f9cad9d7d22304b5ec74d9c47c2a95db32cafa
 
                 <h1>The Martian</h1>
 
@@ -65,7 +57,7 @@
                         So sit back, buckle up, and experience the thrill of "The Martian", the movie that proves that with enough
                         determination and scientific know how, anything is possible
                     </p>
-                </section>              
+                </section>
 
 
 
