--- a/Assignment1/index.html
+++ b/Assignment1/index.html
@@ -22,13 +22,23 @@
             </figure>
 
             <!-- nav-tag for navigation between our five pages and is shared among pages -->
-            <nav>
-                <ul>
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="summary.html">Synopsis</a></li>
-                    <li><a href="ratings.html">Ratings</a></li>
-                    <li><a href="cast.html">Cast</a></li>
-                    <li><a href="contact.html">Contact</a></li>
+            <nav class="navbar">
+                <ul class="navbar__list">
+                    <li class="navbar__item">
+                        <a class="navbar__link" href="index.html">Home</a>
+                    </li>
+                    <li class="navbar__item">
+                        <a class="navbar__link" href="summary.html">Synopsis</a>
+                    </li>
+                    <li class="navbar__item">
+                        <a class="navbar__link" href="ratings.html">Ratings</a>
+                    </li>
+                    <li class="navbar__item">
+                        <a class="navbar__link" href="cast.html">Cast</a>
+                    </li>
+                    <li class="navbar__item">
+                        <a class="navbar__link" href="contact.html">Contact</a>
+                    </li>
                 </ul>
             </nav>
         </header>
@@ -43,27 +53,29 @@
 
                 <!-- Maybe add a banner here -->
                 <figure class="banner-container">
-                    <img class="banner-container__banner" id="banner-img" src="images/banner.jpg" alt=""/>
+                    <img class="banner-container__banner" src="images/banner.jpg" alt=""/>
                 </figure>
 
-                <h1>The Martian</h1>
+                <h1 class="title">The Martian</h1>
 
-                <section class="website-opener">
-                    <h2>Bring Him Home!</h2>
-                    <p>
+                <section class="section">
+                    <h2 class="section__title">Bring Him Home!</h2>
+                    <p class="section__paragraph">
                         Get ready for an out-of this world adventure as you embark on a journey to Mars with "The Martian"!
+                    </p>
+                    <p class="section__paragraph">
                         Join astronaut Mark Watney as he fights against all odds to survive on the red planet and make his way back home.
                         With stunning visuals and a gripping storyline, this film will take you on a ride that you'll never forget.
                         So sit back, buckle up, and experience the thrill of "The Martian", the movie that proves that with enough
-                        determination and scientific know how, anything is possible
+                        determination and scientific know how, anything is possible!
                     </p>
                 </section>
 
 
 
-                <section class="movie-info">
-                    <h2>Movie Info</h2>
-                    <p>
+                <section class="section">
+                    <h2 class="section__title">Movie Info</h2>
+                    <p  class="section__paragraph">
                         Rating:	PG-13 (Injury Images|Brief Nudity|Some Strong Language) <br>
                         Genre:	Sci-Fi, Adventure, Drama <br>
                         Original Language:	English <br>
