--- a/Assignment1/index.html
+++ b/Assignment1/index.html
@@ -51,10 +51,7 @@
             <!-- article-tag is to announce that the page-specific part starts -->
             <article id="homepage">
 
-                <!-- Maybe add a banner here -->
-                <figure class="banner-container">
-                    <img class="banner-container__banner" src="images/banner.jpg" alt=""/>
-                </figure>
+
 
                 <h1 class="title">The Martian</h1>
 
@@ -75,21 +72,63 @@
 
                 <section class="section">
                     <h2 class="section__title">Movie Info</h2>
-                    <p  class="section__paragraph">
-                        Rating:	PG-13 (Injury Images|Brief Nudity|Some Strong Language) <br>
-                        Genre:	Sci-Fi, Adventure, Drama <br>
-                        Original Language:	English <br>
-                        Director:	Ridley Scott <br>
-                        Producer:	Simon Kinberg, Ridley Scott, Michael Schaefer, Aditya Sood, Mark Huffam <br>
-                        Writer:	Drew Goddard <br>
-                        Release Date (Theaters):	Oct 2, 2015  Wide <br>
-                        Release Date (Streaming):	Jan 12, 2016 <br>
-                        Box Office (Gross USA):	$228.4M <br>
-                        Runtime:	2h 22m <br>
-                        Distributor:	20th Century Fox <br>
-                        Sound Mix:	Dolby Atmos <br>
-                        Aspect Ratio:	Scope (2.35:1) <br>
-                    </p>
+                    <table  class="table">
+                        <tbody class="table__body">
+                            <tr class="table__row">
+                                <td class="table__data">Rating</td>
+                                <td class="table__data">PG-13 (Injury Images|Brief Nudity|Some Strong Language)</td>
+                            </tr>
+                            <tr class="table__row">
+                                <td class="table__data">Genre</td>
+                                <td class="table__data">Sci-Fi, Adventure, Drama</td>
+                            </tr>
+                            <tr class="table__row">
+                                <td class="table__data">Original Language</td>
+                                <td class="table__data">English</td>
+                            </tr>
+                            <tr class="table__row">
+                                <td class="table__data">Director</td>
+                                <td class="table__data">Ridley Scott</td>
+                            </tr>
+                            <tr class="table__row">
+                                <td class="table__data">Producer</td>
+                                <td class="table__data">Simon Kinberg, Ridley Scott, Michael Schaefer, Aditya Sood, Mark Huffam</td>
+                            </tr>
+                            <tr class="table__row">
+                                <td class="table__data">Writer</td>
+                                <td class="table__data">Drew Goddard</td>
+                            </tr>
+                            <tr class="table__row">
+                                <td class="table__data">Release Date (Theaters)</td>
+                                <td class="table__data">Oct 2, 2015  Wide</td>
+                            </tr>
+                            <tr class="table__row">
+                                <td class="table__data">Release Date (Streaming)</td>
+                                <td class="table__data">Jan 12, 2016</td>
+                            </tr>
+                            <tr class="table__row">
+                                <td class="table__data">Box Office (Gross USA)</td>
+                                <td class="table__data">$228.4M</td>
+                            </tr>
+                            <tr class="table__row">
+                                <td class="table__data">Runtime</td>
+                                <td class="table__data">2h 22m</td>
+                            </tr>
+                            <tr class="table__row">
+                                <td class="table__data">Distributor</td>
+                                <td class="table__data">20th Century Fox</td>
+                            </tr>
+                            <tr class="table__row">
+                                <td class="table__data">Sound Mix</td>
+                                <td class="table__data">Dolby Atmos</td>
+                            </tr>
+                            <tr class="table__row">
+                                <td class="table__data">Aspect Ratio</td>
+                                <td class="table__data">Scope (2.35:1)</td>
+                            </tr>
+                        </tbody>
+
+                    </table>
                 </section>
 
             </article>
